project_sources/collector/fixtures/powershell_analysis/bad/broad_baseline.ps1
$Suppression = @{ path = "*"; rule_name = "PS*"; reason = "too noisy" }
Write-Output ($Suppression | ConvertTo-Json)
